--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <h1>big yeeeeeeeeeeeeeeeeeeeeeeeet </h1>
     <!-- built files will be auto injected -->
   </body>
 </html>
